jasn/examples/invalid/uppercase_b64_prefix.jasn
/* Invalid binary prefix */
{
  bad: B64"SGVsbG8="
}
